2004-08-11  Christopher Faylor  <cgf@timesys.com>

	* net.cc (cygwin_gethostbyname): Show failing host name on error.

2004-08-10  Christopher Faylor  <cgf@redhat.com>

	* select.cc (select_stuff::wait): Correctly check for w4 array bounds.

2004-08-03  Corinna Vinschen  <corinna@vinschen.de>

	* errno.cc (errmap): Add ERROR_TOO_MANY_LINKS -> EMLINK mapping.
	* syscalls.cc (link): Only copy files if FS doesn't support hard links.

2004-07-26  Christopher January  <chris@atomice.net>

	* fhandler_proc.cc (format_proc_cpuinfo): Remove Intel-specific flags
	from /proc/cpuinfo on non-Intel processors. Added new AMD-specific
	flags. Changed Intel flag names to match Linux.

2004-07-24  Christopher Faylor  <cgf@timesys.com>

	* dcrt0.cc (dll_crt0_0): Use proper boolean arguments.
	* pinfo.cc (pinfo::init): Don't consider MapViewOfFileEx error to be
	fatal if exiting.
	* pinfo.h (pinfo::init): Eliminate default argument and supply the
	argument in the one case that needed it.

2004-07-24  Corinna Vinschen  <corinna@vinschen.de>
	    Christopher Faylor  <cgf@timesys.com>

	* autoload.cc (GetNativeSystemInfo): Add.
	(IsWow64Process): Add.
	* init.cc (respawn_wow64_process): New function.
	(dll_entry): If process has been started from a 64 bit
	process, call respawn_wow64_process.
	* uname.cc (uname): On 64 bit systems, use GetNativeSystemInfo.
	Show actual CPU type.

2004-07-23  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (dtable::get_debugger_info): Make stderr r/w according
	to SUSv3.

2004-07-22  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_tty.cc (fhandler_tty_slave::open): Use requested flag
	values also when copying fhandler from archetype.

2004-07-22  Christopher Faylor  <cgf@timesys.com>

	* pinfo.cc (pinfo::init): Print handle in hex when MapViewOfFile fails.

2004-07-20  Corinna Vinschen  <corinna@vinschen.de>

	* shm.cc: Whitespace fixes.

2004-07-20  Christopher Faylor  <cgf@timesys.com>
