@@ -1,3 +1,8 @@
+2004-08-14  Pierre Humblet <pierre.humblet@ieee.org>
+
+	* fhandler.cc (fhandler_base::open_9x): Set file attributes
+	for new files.
+
 2004-08-11  Christopher Faylor  <cgf@timesys.com>
 
 	* net.cc (cygwin_gethostbyname): Show failing host name on error.
